--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "compress-assets",
   "description": "Compress assets (PNG, JPG, SVG) with command line",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +10,86 @@
     "type": "git",
     "url": "https://github.com/greeto/compress-assets"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "image-compress",
+    "compress images",
+    "images compress",
+    "img",
+    "minifier",
+    "image mini",
+    "picture",
+    "photo",
+    "minify image",
+    "image minify",
+    "image",
+    "image minify",
+    "compression",
+    "image compression",
+    "compression image",
+    "compress",
+    "compress image",
+    "image compress",
+    "image mini",
+    "mini image",
+    "reduce image size",
+    "image minify size",
+    "image compress size",
+    "image size minify",
+    "image lessen",
+    "jpeg compression",
+    "jpg compression",
+    "svg compression",
+    "png compression",
+    "gif compression",
+    "combine compress",
+    "jpeg",
+    "jpg",
+    "svg",
+    "png",
+    "gif",
+    "jpeg minify",
+    "jpg minify",
+    "svg minify",
+    "png minify",
+    "gif minify",
+    "compress jpeg",
+    "compress jpg",
+    "compress svg",
+    "compress png",
+    "compress gif",
+    "jpeg compress",
+    "jpg compress",
+    "svg compress",
+    "png compress",
+    "gif compress",
+    "jpegtran",
+    "mozjpeg",
+    "webp",
+    "guetzli",
+    "jpegRecompress",
+    "jpegoptim",
+    "tinify",
+    "pngquant",
+    "optipng",
+    "pngout",
+    "webp",
+    "pngcrush",
+    "svgo",
+    "gifsicle",
+    "giflossy",
+    "gif2webp",
+    "image min",
+  ],
+  "author": {
+    "name": "Tal Gerafi",
+    "email": "tal@greeto.me",
+    "url": "https://github.com/greeto/compress-assets/"
+  },
+  "files": [
+    "README.md",
+    "index.js",
+    "bin/"
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/greeto/compress-assets/issues"
