--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "gifsicle",
     "giflossy",
     "gif2webp",
-    "image min",
+    "image min"
   ],
   "author": {
     "name": "Tal Gerafi",
