--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "compress-assets",
-  "description": "Compress assets (PNG, JPG, SVG) with command line",
-  "version": "1.0.5",
+  "description": "Compress assets (PNG, JPG) with command line",
+  "version": "1.0.6",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
